# routes/routes.go
@@ -77,7 +77,9 @@ func SetupRouter() *gin.Engine {
 	r.GET("/parse-currency", parserController.ParseCurrencyPage)
 	r.GET("/parse-autocredit", parserController.ParseAutocreditPage)
 	r.GET("/parse-transfer", parserController.ParseTransferPage)
+	r.GET("/parse-transfer-goquery", transferController.ParseTransfer)
 	r.GET("/parse-mortgage", parserController.ParseMortgagePage)
+	r.GET("/parse-mortgage-goquery", mortgageController.ParseMortgage)
 	r.GET("/parse-deposit", parserController.ParseDepositPage)
 	r.GET("/parse-card", parserController.ParseCardPage)
 	r.GET("/parse-microcredit", parserController.ParseMicrocreditPage)
